# googleauthservice

./: .gitignore  CHANGELOG.md  README.md  package.json
client/: CLIENT-LINK.md  package.json  tsconfig.json  vitest.config.ts
client/src/: googleAuthService.test.ts  googleAuthService.ts  index.ts  multiStorageService.test.ts  multiStorageService.ts  types.ts
client/src/components/: GoogleSignInButton.tsx  UserAvatar.tsx
client/src/contexts/: GoogleAuthContext.tsx
docs/: QUICK-START.md
server/: SERVER-LINK.md  pyproject.toml  requirements.txt
server/src/google_auth_service/: __init__.py  config.py  fastapi_hooks.py  fastapi_middleware.py  fastapi_router.py  google_provider.py  jwt_provider.py  middleware.py  route_matcher.py  user_store.py
server/tests/: __init__.py  test_enhanced_features.py  test_google_provider.py  test_hooks.py  test_jwt_provider.py  test_user_store.py
simpleproject/: .env.example  README.md
simpleproject/backend/: main.py  requirements.txt
simpleproject/frontend/: index.html  package-lock.json  package.json
simpleproject/frontend/src/: App.css  App.tsx  main.tsx
